# thesis-plagiarism-check

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_llm_provider.md
.github/workflows/: ci.yml  llm-tests.yml  release.yml
docs/: api.md  architecture.md
src/thesischeck/: __init__.py
src/thesischeck/agents/: __init__.py  ai_detection_agent.py  base.py  kgraph_agent.py  report_agent.py  semantic_agent.py
src/thesischeck/api/: __init__.py  main.py
src/thesischeck/cache/: __init__.py  redis_cache.py
src/thesischeck/core/: __init__.py
src/thesischeck/core/ai_detection/: __init__.py  coherence.py  features.py  fingerprint.py
src/thesischeck/core/config/: __init__.py  adjuster.py  loader.py  models.py
src/thesischeck/core/config/disciplines/: __init__.py  cs.json  default.json  humanities.json  medicine.json
src/thesischeck/core/report/: __init__.py  generator.py
src/thesischeck/core/semantic/: __init__.py  encoder.py  kgraph.py  similarity.py
src/thesischeck/llm/: __init__.py  base.py  claude.py  factory.py  openai_style.py
src/thesischeck/pipeline/: __init__.py  orchestrator.py  preprocessor.py
tests/: __init__.py  conftest.py  test_adjuster.py  test_coherence.py  test_config.py  test_encoder.py  test_features.py  test_fingerprint.py  test_kgraph.py  test_orchestrator.py  test_preprocessor.py  test_similarity.py
tests/fixtures/: __init__.py  config_test.json
